update maintainer name for lavender

--- a/download.html
+++ b/download.html
@@ -1113,7 +1113,7 @@
     <div id="collapseThirtyFive" class="collapse" aria-labelledby="lavender" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">Lucifer-morning-star-96</span></h6>
+        <h6>Maintainer:  <span class="blue">MukulSharma06175</span></h6>
 		<h6>Device:  <span class="blue">Redmi Note 7</span></h6>
 		<h6>Codename:  <span class="blue">lavender</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
