Add Vayu to Official website!

--- a/download.html
+++ b/download.html
@@ -499,6 +499,34 @@
 
   </div> <!--end of device-->
   <div class="ex-basic-4">
+    <div class="card-header" id="Vayu">
+      <h2 class="p-large">
+        <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+          <i class="fas fa-mobile-alt"></i> VAYU
+        </button>
+      </h2>
+    </div>
+    <div id="collapseNine" class="collapse" aria-labelledby="Vayu" data-parent="#devicelist">
+      <div class="card-body">
+
+        <h6>Maintainer:  <span class="blue">KangMoney</span></h6>
+		<h6>Device:  <span class="blue"> POCO X3 Pro </span></h6>
+		<h6>Codename:  <span class="blue">Vayu</span></h6>
+		<h6>ROM Status:  <span class="blue">Official</span></h6>
+       <hr class="new2">
+		<p>
+	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1577840/#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg popup-with-move-anim" href="#Vayu-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
+	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusVayu" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
+	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/m/kangmonkey.10219211/" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
+	  </p>
+
+      </div>
+
+    </div>
+
+  </div> <!--end of device-->
+  <div class="ex-basic-4">
     <div class="card-header" id="vince">
       <h2 class="p-large">
         <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
