Update Download.html to new maintainer's list for Tissot and Cph1859

--- a/download.html
+++ b/download.html
@@ -453,7 +453,7 @@
     <div id="collapseTwelve" class="collapse" aria-labelledby="tissot" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">anonymous</span></h6>
+        <h6>Maintainer:  <span class="blue">Meghthedev</span></h6>
 		<h6>Device:  <span class="blue"> Xiaomi Mi A1</span></h6>
 		<h6>Codename:  <span class="blue">tissot</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
@@ -1243,10 +1243,10 @@
     <div id="collapseForty" class="collapse" aria-labelledby="CPH1859" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">I_am_pronoob</span></h6>
+        <h6>Maintainer:  <span class="blue">Meghthedev</span></h6>
 		<h6>Device:  <span class="blue">Oppo Realme 1</span></h6>
 		<h6>Codename:  <span class="blue">CPH1859</span></h6>
-		<h6>ROM Status:  <span class="blue">Beta-Official</span></h6>
+		<h6>ROM Status:  <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
 	  <a class="btn-solid-lg page-scroll" href="https://www.pling.com/p/1396064#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
